--- a/test/cloud-config-1-dev.properties
+++ b/test/cloud-config-1-dev.properties
@@ -1,6 +1,6 @@
 from1=spring_test_11
-name=zhufanfan
-sex=lady
-age=27
-nationality=china
+zff.name=zhufanfan
+zff.sex=lady
+zff.age=27
+zff.nationality=china
 
